fix: login page alignment (#27)

--- a/src/LoginPage/loginPage.css
+++ b/src/LoginPage/loginPage.css
@@ -1,18 +1,16 @@
-html,
-body {
+html, body {
     height: 100%;
     margin: 0;
 }
 
 body {
     background-color: #EFF3F6;
-    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: 0;
 }
-
 
 .login_bg {
     background: #FFFFFF;
@@ -25,7 +23,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-position: 0px 130px;
+    background-position:  0px 130px;
 }
 
 .company_logo {
@@ -46,25 +44,25 @@ body {
 
 .login_page {
     border: 1px solid #8B8B8B;
-    position: absolute;
+    position: fixed;
     width: 400px;
-    height: auto;
+    max-height: 80vh;
+    overflow-y: auto;
     transform: translateX(-50%);
     left: 50%;
     padding: 40px;
-    top: 170px;
-    bottom: 150px;
+    top: 58%;
+    transform: translate(-50%, -50%);
     background: #D9D9D9;
     mix-blend-mode: hard-light;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
     border-radius: 30px;
+    z-index: 2;
 }
 
 .login {
     position: absolute;
     width: 120px;
-    bottom: 350px;
-    left: 38%;
     font-family: 'Judson';
     font-style: normal;
     font-weight: 100;
@@ -73,8 +71,10 @@ body {
     color: #000000;
     margin-bottom: 50px;
     text-align: center;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
 }
-
 
 .text_bar {
     font-family: 'Judson';
@@ -148,15 +148,25 @@ input:focus {
     background-color: #5142FB;
 }
 
-.pass_icon {
-    position: absolute;
-    top: 35px;
-    right: 15%;
-    cursor: pointer;
-}
-
 .alert_danger {
     color: #f20b0b;
     font-size: 18px;
     font-family: 'Judson';
+}   
+
+@media (max-width: 700px) {
+    .login_page {
+        width: 50%;
+        max-height: 80vh;
+        padding: 20px;
+    }
+
+    .text_bar {
+        width: 70%;
+    }
+
+    .login {
+        font-size: 35px;
+        top: -50px;
+    }
 }
